<resources>
    <string name="app_name">KnowlegeCity</string>
    <string name="ok">Okay</string>
    <string name="hint">Text Sring</string>
    <string name="login">Log In</string>
    <string name="welcome_to_the_learning_management_system">Welcome to the Learning Management System</string>
    <string name="please_log_in_to_continue">Please log in to continue</string>
    <string name="remember_me">Remember me</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="default_group">Default Group</string>
    <string name="log_out">Log Out</string>
    <string name="logout_text">Are you sure you want to logout ?</string>
    <string name="user_list">User List</string>
    <string name="no_data">No data Found</string>
</resources>
