<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".module.login.LoginActivity">

    <data>
        <import type="android.view.View"/>

        <variable name="viewModel"
            type="com.codebrew.kc.module.login.LoginViewModel"/>
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_gdline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/large_margin" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_gdline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/large_margin" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_margin"
            app:layout_constraintBottom_toTopOf="@+id/welcome_text"
            app:layout_constraintEnd_toEndOf="@id/end_gdline"
            app:layout_constraintEnd_toStartOf="@+id/end_gdline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/start_gdline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_logo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:background="@drawable/selector_editext"
            android:drawableStart="@drawable/selector_user_icon"
            android:drawablePadding="@dimen/small_margin"
            android:fontFamily="@font/open_sans"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="@dimen/small_margin"
            android:textSize="@dimen/text_medium"
            android:textStyle="italic"
            android:imeOptions="actionNext"
            app:layout_constraintBottom_toTopOf="@+id/edit_pswr"
            app:layout_constraintEnd_toEndOf="@id/end_gdline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/start_gdline"
            app:layout_constraintTop_toBottomOf="@+id/login_text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_pswr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/selector_editext"
            android:drawableStart="@drawable/selector_pass_icon"
            android:drawablePadding="@dimen/small_margin"
            android:fontFamily="@font/open_sans"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/small_margin"
            android:textSize="@dimen/text_medium"
            android:textStyle="italic"
            android:imeOptions="actionDone"
            app:layout_constraintBottom_toTopOf="@+id/check_remember"
            app:layout_constraintEnd_toEndOf="@id/end_gdline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/start_gdline"
            app:layout_constraintTop_toBottomOf="@+id/edit_username" />

        <CheckBox
            android:id="@+id/check_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/open_sans"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/remember_me"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/small_margin"
            android:button="@drawable/selector_checkbox"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@id/start_gdline"
            app:layout_constraintTop_toBottomOf="@+id/edit_pswr" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:enabled="@{!viewModel.isLoading}"
            android:fontFamily="@font/open_sans"
            android:paddingStart="@dimen/large_margin"
            android:paddingTop="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:paddingBottom="@dimen/small_margin"
            android:text="@string/login"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:backgroundTint="@color/app_color"
            app:cornerRadius="@dimen/large_margin"
            app:icon="@drawable/ic_arrow"
            app:iconGravity="end"
            app:iconSize="@dimen/xlarge_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end_gdline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/start_gdline"
            app:layout_constraintTop_toBottomOf="@+id/check_remember"
            app:layout_constraintVertical_bias="0.100000024" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_margin"
            android:fontFamily="@font/open_sans"
            android:text="@string/welcome_to_the_learning_management_system"
            android:textAlignment="viewStart"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toTopOf="@+id/login_text"
            app:layout_constraintEnd_toStartOf="@+id/end_gdline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/start_gdline"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/please_log_in_to_continue"
            android:textAlignment="viewStart"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toTopOf="@+id/edit_username"
            app:layout_constraintEnd_toEndOf="@id/end_gdline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/start_gdline"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />


        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end_gdline"
            app:layout_constraintStart_toStartOf="@id/start_gdline"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</layout>